--- a/src/app/pages/addsellerdialog/addsellerdialog.component.html
+++ b/src/app/pages/addsellerdialog/addsellerdialog.component.html
@@ -2,10 +2,10 @@
    <h1 mat-dialog-title>Add Seller </h1>
    <mat-dialog-content>
        <mat-form-field>
-           <input matInput placeholder="Name*" formControlName="sellername" >
+           <input matInput placeholder="Name*" formControlName="name" >
        </mat-form-field>
        <mat-form-field>
-           <input matInput placeholder= "Store Link (optional)" formControlName="StoreLink" >
+           <input matInput placeholder= "Store Link (optional)" formControlName="url" >
        </mat-form-field>
        <mat-dialog-actions>
            <div style="display: flex; flex-direction: row; justify-content: flex-end;">
