--- a/src/app/pages/brands/brand-detail/brand-detail.component.html
+++ b/src/app/pages/brands/brand-detail/brand-detail.component.html
@@ -4,17 +4,12 @@
         <td mat-cell *matCellDef="let element">{{element.skuId}}</td>
         <td></td>
     </ng-container>
-    <ng-container matColumnDef="desc" style="width:70%">
+    <ng-container matColumnDef="desc" style="width:60%">
             <th mat-header-cell *matHeaderCellDef > Product Name </th>
-            <td mat-cell *matCellDef="let element" matSuffix>{{element.desc}}<mat-icon>delete_forever</mat-icon></td>
+            <td mat-cell *matCellDef="let element" matSuffix>{{element.desc}}<mat-icon (click) = "deleteProduct(element.id)">delete_forever</mat-icon></td>
+            <!-- <mat-icon>delete_forever</mat-icon> -->
             <td></td>
-            <!--  -->
     </ng-container>
-    <!-- <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> Delete </th>
-            <td mat-cell *matCellDef="let element"><mat-icon>delete_forever</mat-icon></td>
-            <td></td>
-    </ng-container>-->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   <mat-divider></mat-divider>
