--- a/src/app/pages/sellers/seller-list/seller-list.component.html
+++ b/src/app/pages/sellers/seller-list/seller-list.component.html
@@ -6,7 +6,7 @@
 <mat-card style="margin:auto 15px;" >
     <mat-card-content>
         <mat-nav-list>
-            <a mat-list-item *ngFor="let seller of Seller" [routerLink]="[seller.id]">
+            <a mat-list-item *ngFor="let seller of sellers" [routerLink]="[seller.id]">
                 
                     <div style="display:flex;flex:1;">
                         <span class="circleIcon">{{seller.name[0]}}</span>
