--- a/src/app/pages/alerts/alerts.component.html
+++ b/src/app/pages/alerts/alerts.component.html
@@ -43,6 +43,9 @@
                                     </div>
                                 </div>
                             </mat-list-item>
+                            <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center;">
+                                <mat-spinner></mat-spinner>
+                            </div>
                 </mat-nav-list>
                 </mat-card>
         </mat-tab>
@@ -89,6 +92,9 @@
                                         </div>
                                     </div>
                         </mat-list-item>
+                        <div *ngIf="isLoading" >
+                                <mat-spinner></mat-spinner>
+                        </div>
                         
                 </mat-nav-list>
             </mat-card>
@@ -136,6 +142,9 @@
                                         </div>
                                     </div>
                         </mat-list-item>
+                        <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center;">
+                                <mat-spinner></mat-spinner>
+                        </div>
                         
                 </mat-nav-list>
             </mat-card>
