--- a/src/app/pages/sellers/seller-detail/seller-detail.component.html
+++ b/src/app/pages/sellers/seller-detail/seller-detail.component.html
@@ -1,7 +1,7 @@
 <table mat-table [dataSource] = "dataSource1" style="width:120%;margin:24px;"> 
         <ng-container matColumnDef="id"style = "width:10% ; font-size:18px;">
                 <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
-                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.id}} </td>
+                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.skuId}} </td>
         </ng-container>
         <ng-container matColumnDef="brand">
                 <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Brand Name </th>
