--- a/src/app/pages/sellers/seller-list/seller-list.component.html
+++ b/src/app/pages/sellers/seller-list/seller-list.component.html
@@ -12,36 +12,20 @@
                         <span class="circleIcon">{{seller.name[0]}}</span>
                         <span matSuffix>{{seller.name}}</span>
                     </div>
-                    <div><span><button mat-button><mat-icon>playlist_add</mat-icon></button></span>
-                        <span><button mat-button><mat-icon>list</mat-icon></button></span>
-                        <span><button mat-button><mat-icon>delete_forever</mat-icon></button></span>
-                        <span><button mat-button><mat-icon>next_week</mat-icon></button></span>
-                        <!-- <span><a *ngIf = "seller.name === 'IFixItZone' ; else Case2" href="https://www.ebay.com/str/iFixitzone"><button mat-button><mat-icon>nextweek</mat-icon></button></a></span>
-                        <ng-template #Case2> 
-                            <span><a href="http://www.ebaystores.com/Buy-Wheels-Today"><button mat-button>next_week</button></a></span>
-                        </ng-template> -->
-                    </div>
-                                
-            </a>
-            <!-- <a mat-list-item [routerLink] = "[sellerdetail, seller.id]">
-                    <div class="head_container">
-                        <div style="display:flex;flex:1;">
-                            <span>IFixItZone</span>
-                        </div>
-                        <div><span><mat-icon>playlist_add</mat-icon></span>
-                            <span><mat-icon>list</mat-icon></span>
-                            <span><mat-icon>delete_forever</mat-icon></span>
-                            <span><mat-icon>next_week</mat-icon></span>
-                        </div>
+                    <div><span><button mat-button matTooltip="Upload Product Links"><mat-icon>playlist_add</mat-icon></button></span>
+                        <span><button matTooltip="View Products" mat-button><mat-icon>list</mat-icon></button></span>
+                        <span><button matTooltip="Delete The Seller" mat-button (click) = "deleteSeller(seller)" ><mat-icon >delete_forever</mat-icon></button></span>
+                        <span><button matTooltip="Go To Store" mat-button (click) = "gotoStore(seller)"><mat-icon>next_week</mat-icon></button></span>
                     </div>                
-                </a> -->
-            
-            
-            
+            </a>    
         </mat-nav-list>
+        <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center;">
+                <mat-spinner></mat-spinner>
+        </div>
     
     </mat-card-content>
 </mat-card>
+
 
 
 
