--- a/src/app/pages/alerts/alerts.component.html
+++ b/src/app/pages/alerts/alerts.component.html
@@ -1,7 +1,7 @@
 
 <mat-tab-group style="margin-left: 20px;">
         <mat-tab label="All" style="font-size:14px;">
-            <mat-card>
+            <mat-card style="width:98%">
                 <mat-nav-list role="list">
                         <mat-list-item role="listitem">
                             <div class="head_container">
@@ -101,7 +101,7 @@
         </mat-tab>
         <!--For Another Tab Read-->
         <mat-tab label="Read">
-                <mat-card>
+                <mat-card style="width:98%">
                 <mat-nav-list role="list">
                         <mat-list-item role="listitem">
                             <div class="head_container">
