--- a/src/app/pages/brands/brand-list/brand-list.component.html
+++ b/src/app/pages/brands/brand-list/brand-list.component.html
@@ -4,7 +4,7 @@
         <button (click) = "openAddBrand()" mat-raised-button color="primary" style="margin-right:20px">ADD BRAND</button>
         </div>
         
-        <mat-card style="margin:auto 15px;">
+        <mat-card style="margin:auto 15px; width:95%">
             <mat-card-content >
                 <mat-nav-list>
                      
