--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -10,11 +10,11 @@
     </form>    
     </div>
     <div style="display:flex;flex-direction:row;align-items: center;">
-        <button mat-raised-button color="primary" style="margin-right: 15px;">EXPORT AS CSV</button>
+        <button (click) = "exportAsCsv()" mat-raised-button color="primary" style="margin-right: 15px;">EXPORT AS CSV</button>
         <mat-slide-toggle color="primary" (toggleChange) = "modifyTable()">Compare</mat-slide-toggle> 
     </div>   
 </div>          
-          <table mat-table [dataSource]= 'dashArray' style='width:100%; margin-left: 20px;'>
+          <table mat-table [dataSource]= 'dashArray' style='width:96%; margin-left: 20px;'>
           <ng-container matColumnDef="Sku">
                   <th mat-header-cell *matHeaderCellDef > MPN </th>
                   <td mat-cell *matCellDef="let element"> {{element.Sku}} </td>
