--- a/src/app/pages/sellers/seller-list/seller-list.component.css
+++ b/src/app/pages/sellers/seller-list/seller-list.component.css
@@ -6,7 +6,7 @@
 .brandcard{
     margin:auto 15px;    
 }
-head_container{
+.head_container{
     display:flex;
     flex-direction: row;
     justify-content: space-between;
@@ -22,4 +22,8 @@ head_container{
     text-align: center;
     line-height: 30px;
     margin-right: 20px;;
+}
+.mat-dialog-actions {
+    padding: 0px !important;
+    margin-bottom: 0px !important;
 }
