today's work 2nd dec

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
   
   <mat-card class="LoginCard">
     <mat-card-title class="titlecard">
-      <mat-icon style="font-size: 66.67px;">account_circle</mat-icon><br>
+      <mat-icon style="font-size: 82.67px; margin-right:45px;">account_circle</mat-icon><br>
     </mat-card-title>
     <mat-card-content>
       <form [formGroup]= "UserForm" (ngSubmit)="onLogin()">
