--- a/src/app/pages/sellers/seller-detail/seller-detail.component.html
+++ b/src/app/pages/sellers/seller-detail/seller-detail.component.html
@@ -1,7 +1,9 @@
+ <!-- <div>
 <table mat-table [dataSource] = "dataSource1" style="width:120%;margin:24px;"> 
+        <ng-template *ngIf= dataSource1>
         <ng-container matColumnDef="id"style = "width:10% ; font-size:18px;">
-                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
-                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.skuId}} </td>
+                        <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
+                        <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.skuId}} </td>
         </ng-container>
         <ng-container matColumnDef="brand">
                 <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Brand Name </th>
@@ -21,6 +23,221 @@
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  <mat-divider></mat-divider>
-<table>
+        <mat-divider></mat-divider>
+        </ng-template>
+        
+</table>
+</div>
+<div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center;">
+                <mat-spinner></mat-spinner>
+</div>  -->
+        
 
+
+
+
+<!-- <mat-form-field>
+        <mat-select>
+                <mat-option></mat-option>
+        </mat-select>
+</mat-form-field> -->
+<mat-tab-group [selectedIndex]="selected.value"
+                (selectedTabChange)="tabSelected(selected.value)"
+               (selectedIndexChange)="selected.setValue($event)">
+  <mat-tab *ngFor="let tab of tabs; let index = index" [label]="tab">
+        <div (click)="tabSelected(index)">
+                        <table mat-table [dataSource] = "dataSource2" style="width:120%;margin:24px;"> 
+                                        <ng-container matColumnDef="id"style = "width:10% ; font-size:18px;">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.skuId}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="brand">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Brand Name </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.brand}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="quantity">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Quantity </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.quantity}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="price">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Price</th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.price}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="url">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Url </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:55%;font-size: 15px;"> {{element.url}} </td>
+                                        </ng-container>
+                                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                  <mat-divider></mat-divider>
+                                </table>
+
+        </div>
+        </mat-tab>
+</mat-tab-group>
+<!-- 
+<mat-tab-group>
+        <mat-tab label="Under Process">
+                        <table mat-table [dataSource] = "dataSource1" style="width:120%;margin:24px;"> 
+                                        <ng-container matColumnDef="id"style = "width:10% ; font-size:18px;">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.skuId}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="brand">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Brand Name </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.brand}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="quantity">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Quantity </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.quantity}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="price">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Price</th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.price}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="url">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Url </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:55%;font-size: 15px;"> {{element.url}} </td>
+                                        </ng-container>
+                                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                  <mat-divider></mat-divider>
+                                </table>
+        </mat-tab>
+        <mat-tab label="Perfectly Parsed">
+                        <table mat-table [dataSource] = "dataSource1" style="width:120%;margin:24px;"> 
+                                        <ng-container matColumnDef="id"style = "width:10% ; font-size:18px;">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.skuId}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="brand">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Brand Name </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.brand}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="quantity">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Quantity </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.quantity}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="price">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Price</th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.price}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="url">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Url </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:55%;font-size: 15px;"> {{element.url}} </td>
+                                        </ng-container>
+                                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                  <mat-divider></mat-divider>
+                                </table>
+        </mat-tab>
+        <mat-tab label="Listing not Found">
+                        <table mat-table [dataSource] = "dataSource1" style="width:120%;margin:24px;"> 
+                                        <ng-container matColumnDef="id"style = "width:10% ; font-size:18px;">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.skuId}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="brand">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Brand Name </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.brand}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="quantity">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Quantity </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.quantity}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="price">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Price</th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.price}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="url">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Url </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:55%;font-size: 15px;"> {{element.url}} </td>
+                                        </ng-container>
+                                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                  <mat-divider></mat-divider>
+                                </table>
+        </mat-tab>
+        <mat-tab label="MPN not Found" >
+                        <table mat-table [dataSource] = "dataSource1" style="width:120%;margin:24px;"> 
+                                        <ng-container matColumnDef="id"style = "width:10% ; font-size:18px;">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.skuId}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="brand">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Brand Name </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.brand}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="quantity">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Quantity </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.quantity}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="price">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Price</th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.price}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="url">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Url </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:55%;font-size: 15px;"> {{element.url}} </td>
+                                        </ng-container>
+                                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                  <mat-divider></mat-divider>
+                                </table>
+        </mat-tab>
+        <mat-tab label="Price not Found">
+                        <table mat-table [dataSource] = "dataSource1" style="width:120%;margin:24px;"> 
+                                        <ng-container matColumnDef="id"style = "width:10% ; font-size:18px;">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.skuId}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="brand">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Brand Name </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.brand}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="quantity">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Quantity </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.quantity}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="price">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Price</th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.price}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="url">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Url </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:55%;font-size: 15px;"> {{element.url}} </td>
+                                        </ng-container>
+                                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                  <mat-divider></mat-divider>
+                                </table>
+        </mat-tab>
+        <mat-tab label="Error in Parsing">
+                        <table mat-table [dataSource] = "dataSource1" style="width:120%;margin:24px;"> 
+                                        <ng-container matColumnDef="id"style = "width:10% ; font-size:18px;">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.skuId}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="brand">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Brand Name </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.brand}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="quantity">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Quantity </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.quantity}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="price">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Price</th>
+                                                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.price}} </td>
+                                        </ng-container>
+                                        <ng-container matColumnDef="url">
+                                                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Url </th>
+                                                <td mat-cell *matCellDef="let element" style = "width:55%;font-size: 15px;"> {{element.url}} </td>
+                                        </ng-container>
+                                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                  <mat-divider></mat-divider>
+                                </table>
+        </mat-tab>
+
+</mat-tab-group> -->
